test/customTag/syntaxError/syntaxError.wxml
<!-- subA(自闭合)标签 会被检测 -->

<subA xXX="{{subA_xXX}"  />
